删除不必要的东西

--- a/src/assets/css/variables.styl
+++ b/src/assets/css/variables.styl
@@ -1,4 +1,4 @@
-$font-yahei = Microsoft YaHei UI, 'Avenir', Helvetica, Arial, sans-serif
+// $font-yahei = Microsoft YaHei UI, 'Avenir', Helvetica, Arial, sans-serif
 $font-pang = Pangmenzhengdao, 'Avenir', Helvetica, Arial, sans-serif
 $font-din = DIN, 'Avenir', Helvetica, Arial, sans-serif
 $color-map(opacity = 0.3)
